--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" type="image/png" href="images/Prim.png" />
+	<title>Syriel Alvaro</title>
+	<!-- METTRE UN FAVICON -->
 </head>
-<body>
-	<p>
-		SITE WEB FONCTIONNEL : SYRIEL ALVRO
-	</p>
+<body class="background">
+		<h1 class="name">
+			Syriel J.R.ALVARO
+		</h1>
+		<ul class="bann">
+			<li><a href="https://www.instagram.com/syriel_alvaro/">Portfolio</a></li>
+			<li><a href="https://www.instagram.com/syriel_alvaro/">Insta</a></li>
+			<li><a href="https://www.tiktok.com/@syriel_alvaro">Tiktok</a></li>
+			<li><a href="https://ko-fi.com/syriel">Kofi</a></li>
+		</ul>
 </body>
 </html>
