--- a/index.html
+++ b/index.html
@@ -1,21 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" lang="en">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- METTRE UNE META DESCRIPTION -->
+	<meta name="description" content="Artistic portfolio in 2D animation and digital illustration. Explore my creative process: drawings, sketches and animations, designed to build a visual universe for the animation film industry.">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="icon" type="image/png" href="images/Prim.png" />
-	<title>Syriel Alvaro</title>
 	<!-- METTRE UN FAVICON -->
+	<link rel="icon" type="image/png" href="./images/Prim.png">
+	<link rel="icon" sizes="any" href="./images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+	<title>Syriel Alvaro</title>
 </head>
 <body class="background">
-		<h1 class="name">
-			Syriel J.R.ALVARO
-		</h1>
-		<ul class="bann">
-			<li><a href="https://www.instagram.com/syriel_alvaro/">Portfolio</a></li>
-			<li><a href="https://www.instagram.com/syriel_alvaro/">Insta</a></li>
-			<li><a href="https://www.tiktok.com/@syriel_alvaro">Tiktok</a></li>
-			<li><a href="https://ko-fi.com/syriel">Kofi</a></li>
-		</ul>
+	<h1 class="name">
+		Syriel J.R.ALVARO
+	</h1>
+	<ul class="container">
+		<li class="box"><strong><a href="docs/WAIDE2025.pdf">Portfolio</a></strong></li>
+		<li class="box"><a href="https://www.instagram.com/syriel_alvaro/">Insta</a></li>
+		<li class="box"><a href="https://www.tiktok.com/@syriel_alvaro">Tiktok</a></li>
+		<li class="box"><a href="https://ko-fi.com/syriel">Kofi</a></li>
+	</ul>
 </body>
 </html>
+
+<!--  
+                                                                                
+                                                      #*+=%                     
+                      **+==-+                       **+===-                     
+                      **+=====--                  %**+====-                     
+                      **+========                 ##+=====-                     
+                      **+=========                #*=======                     
+                      ##*+========    **++======= #*======                      
+                      ####*++=====   ##++=------=- #+==                         
+                        ######***#  *+--------------:-                          
+                           ##### ***=:------------------                        
+                               ****==------+*+*----+::#--                       
+                              #***+==----+-::::*----+::*--                      
+                              +***===----=+::::-*---=+-#=-                      
+                              +***+==-----+--***-===------                      
+                              #****===-----------------+--                      
+                             **+****===--++=----------*+=                       
+                           ****#+****===*--=*---------=+                        
+                         #***#####+***=====#+======+++==                        
+                        ****##########*******+++**++=====                       
+                       ****##########%*####  %%##**++====                       
+                      ****########%%***##*#* %###**++=====                      
+                       **########%#++---+**+-####**++=====                      
+                         **#####%*+-------=+=-=#***++===                        
+                      +* ##%#####+=-*-------+=-:***###*+++#                     
+                   ***###**#**  +=-++=-------+=--#*#===###*+=-                  
+                 ****##*##*#####+=-*++=---====+++++++++++++++=-+                
+               ****#######**###+==-**++=--======+==-+***++++++==:               
+              ****##########%%#+==-*+-===++++=------++***+++++++===             
+            *****###########%%**======+***+++-----------=*+++++++==-            
+           ****#############%#*#+++++%***++++-------------*+++++++===           
+          ****##############%#*######****++++-------------:*+++++++===+         
+         ****###############%%#*###******++++--------------=*+++++++===+        
+        *****###############%%*#**********+++--------------:*++++++++===        
+        ****################%%%*#*********+++=--------------*++++++++====       
+       *****################%%%#**********++++--------------**+++++++====       
+       +*****###############%%%%#**********+++-------------+**++++++++=         
+          *****##############%%%#  %####   =+++------------***+**#              
+                 %*###########%             +++=-----------                     
+                                            #+++===-------+                     
+                                             ++++-----+**-                      
+                                              +*******+---                      
+                                               +*********                       
+                                                ********%                       
+                                                   *+==                         
+-->
